--- a/index.html
+++ b/index.html
@@ -2,26 +2,89 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <style type="text/css">
+
+      body {
+        font-family: sans-serif;
+        padding: 16px;
+      }
+
+      h1 {
+        line-height: 2em;
+        letter-spacing: .06em;
+      }
+
+      h2 {
+        line-height: 2em;
+        letter-spacing: .06em;
+        color: #555;
+      }
+
+      p, li {
+        font-size: 15px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 2em;
+        letter-spacing: .06em;
+        color: #555;
+      }
+
+      .bold {
+        font-weight: bold;
+      }
+
+      .alot {
+        color: green;
+      }
+
+      .some {
+        color: orange;
+      }
+
+      .none {
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Kyle Corry</h1>
+    <h2>
+      Class of 2020
+    </h2>
     <p>
-      [Self introduction]
+      I'm a Computer Science major, with no minor.
     </p>
     <p>
-      [Major and other information]
+      I enjoy hiking, nature photography, wilderness survival, and open source programming.
     </p>
+    <p class="bold">Previous CS Courses</p>
     <p>
-      [Other things]
+      <ul>
+        <li>CS 1102</li>
+        <li>CS 210X</li>
+        <li>CS 2022</li>
+        <li>CS 2223</li>
+        <li>CS 3133</li>
+        <li>CS 2303</li>
+        <li>CS 2011</li>
+        <li>CS 4518</li>
+        <li>CS 3013</li>
+        <li>CS 3733</li>
+      </ul>
+    </p>
+    <br>
+    <p class="bold">Programming Languages</p>
+    <p>
+      <ul>
+        <li>HTML - <span class="alot">A lot</span></li>
+        <li>CSS - <span class="alot">A lot</span></li>
+        <li>Java - <span class="alot">A lot</span></li>
+        <li>JavaScript - <span class="alot">A lot</span></li>
+        <li>Ruby - <span class="none">None</span></li>
+        <li>Python - <span class="alot">A lot</span></li>
+        <li>unit testing - <span class="some">Some</span> (Depends on language)</li>
+      </ul>
     </p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
   </body>
 </html>
