--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Skyler Kim</h1>
     <p>
       [Self introduction]
     </p>
@@ -12,7 +12,7 @@
       [Major and other information]
     </p>
     <p>
-      [Other things]
+      I like to play Pokemon VGC. 
     </p>
 
     <h2>Experience</h2>
@@ -20,8 +20,8 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Bank of Hawaii</li>
+      <li>SA for WPI</li>
     </ul>
   </body>
 </html>
