--- a/index.html
+++ b/index.html
@@ -2,49 +2,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <style type="text/css">
-
-      body {
-        font-family: sans-serif;
-        padding: 16px;
-      }
-
-      h1 {
-        line-height: 2em;
-        letter-spacing: .06em;
-      }
-
-      h2 {
-        line-height: 2em;
-        letter-spacing: .06em;
-        color: #555;
-      }
-
-      p, li {
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 300;
-        line-height: 2em;
-        letter-spacing: .06em;
-        color: #555;
-      }
-
-      .bold {
-        font-weight: bold;
-      }
-
-      .alot {
-        color: green;
-      }
-
-      .some {
-        color: orange;
-      }
-
-      .none {
-        color: red;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>Information about Kyle Corry</h1>
