Test auto deploy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       [Self introduction]
     </p>
     <p>
-      [Major and other information]
+      I'm a junior majoring in CS.<br/> I have a little experience with ASP .NET, but I would like to learn more.
     </p>
     <p>
       I like to play Pokemon VGC. 
