Updated index for hw requirement.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,78 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Ethan Schutzman</h1>
     <p>
-      [Self introduction]
+      I am currently in the process of enrolling in the BS/MS in CS at WPI, my master's will be in Software Engineering with a focus in Cybersecurity.
     </p>
     <p>
-      [Major and other information]
+      I am actively pursuing an undergraduate and graduate degree in Computer Science
     </p>
     <p>
-      [Other things]
+      When I am not actively programming I enjoy traveling, playing video games, practicing the guitar, and spending time with my friends and family
     </p>
 
     <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+    <h3>
+      Work experience
+    </h3>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Crowe LLP</li>
+      <ul>
+        <li>HTML/CSHTML</li>
+        <li>CSS</li>
+        <li>TypeScript</li>
+        <li>JavaScript</li>
+        <li>Node.js</li>
+        <li>Angular 2+</li>
+      </ul>
+      <li>Oracle Corporation</li>
+        <ul>
+          <li>Python</li>
+        </ul>
+      <li>JMK Systems Solutions Inc.</li>
+        <ul><li>Python</li></ul>
+    <li>Sparkle Gear</li>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>PHP</li>
+    </ul>
+    </ul>
+
+    <h3>Programming Experience</h3>
+    <p>Below is my familiarity with the programming languages and unit testing, rated out of 10.</p>
+    <ul>
+      <li>Python - 8/10</li>
+      <li>Java - 8/10 </li>
+      <li>HTML - 6/10</li>
+      <li>CSS 6/10</li>
+      <li>JavaScript - 6/10</li>
+      <li>Ruby - 0/10</li>
+      <li>Unit Testing - 5/10 </li>
+    </ul>
+  <h3>Classes Taken</h3>
+    <ul>
+      <li>CS 1004 - Intro to Programming for Non-Majors</li>
+      <li>CS 1101 - Intro to Programming for Majors</li>
+      <li>CS 2102 - Object Oriented Design</li>
+      <li>CS 2303 - System Programming</li>
+      <li>CS 2011 - Introduction to Assembly and Machine Language</li>
+      <li>CS 3013 - Operating Systems</li>
+      <li>CS 3733 - Software Engineering</li>
+      <li>CS 3043 - Social Implications of Information Processing</li>
+      <li>CS 3133 - Foundation of Computer Science</li>
+      <li>CS 3431 - Databse Systems I</li>
+      <li>CS 3516 - Networks I</li>
+      <li>CS 4100 - AI for IMGD</li>
+      <li>CS 4518 - Mobile and Ubiquitous Computing</li>
+      <li>CS 4803 - Biological and Biomedical Database Mining</li>
+      <li>CS 4241 - Webware</li>
+      <li>CS 502 - Operating Systems*</li>
+      <li>CS 509 - Design of Software Systems*</li>
+      <li>MQP - Self Driving RC car*</li>
+      <p>* indicates current enrollment</p>
     </ul>
   </body>
 </html>
