--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Nathaniel Carter</h1>
     <p>
       [Self introduction]
     </p>
     <p>
-      [Major and other information]
+        IMGD Major CS Minor
     </p>
     <p>
       [Other things]
