--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about [Yufei Gao]</h1>
     <p>
-      [Self introduction]
+      WPI class of 2020 (plan to graduate in 2019)
     </p>
     <p>
-      [Major and other information]
+      CS Major, Data Science Minor
     </p>
     <p>
-      [Other things]
+      Previous computer science courses that I have taken at WPI:<br>
+      CS1101, CS2011, CS2022, CS2102, CS2223, CS2303, CS3013, CS3133, CS3431, CS3733, CS4432<br>
+      Currently I am taking:<br>
+      CS4241 & CS4120
     </p>
-
-    <h2>Experience</h2>
     <p>
-      Working experience
+      My experience with the following technologies and methods (none, some, a lot):<br>
+      HTML: none<br>
+      CSS: some<br>
+      Java: a lot<br>
+      JavaScript: none<br>
+      Ruby: none<br>
+      Python: some<br>
+      unit testing: some
     </p>
     <ul>
       <li>IBM/Rational</li>
