add information about myself

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about [Ruyue Wang]</h1>
     <p>
-      [Self introduction]
+      [Class of 2020 at WPI. I enjoy doing handcratfs especially the fabric art flowers. I also like travling and playing the piano.]
     </p>
     <p>
-      [Major and other information]
+      [Computer Science Major and Data Science Minor]
     </p>
     <p>
-      [Other things]
+      [CS1101, CS2102, CS2303, CS2011, CS3733, CS3133, CS3013, CS4432]
     </p>
 
-    <h2>Experience</h2>
+    <h2>Experience [Java, CSS, C, C++, Database]</h2>
     <p>
       Working experience
     </p>
