change for html

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Da Xu</h1>
     <p>
-      [Self introduction]
+      Hello, my name is Da Xu. I'm a junior student major in CS. I conducted several projects related to web development and hope to learn more cool stuff in this class!
     </p>
     <p>
-      [Major and other information]
+      Major : Computer Science
+      <p>Class : 2020</p>
+      
+      Courses : Object-oriented Design Concepts (Java), Systems Programming Concepts (C, C++), Assembly Language, Algorithm, Operating System, Database Systems, Software Engineering, Foundations of Computer Science,
     </p>
     <p>
-      [Other things]
+      Experience with technologies : HTML CSS JavaScript Java
     </p>
 
     <h2>Experience</h2>
@@ -20,7 +23,6 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
       <li>WPI</li>
     </ul>
   </body>
