add web-related experience

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      Web related experience
     </p>
     <ul>
-      <li>WPI</li>
+      <li>Ticket+</li>
+      <ul>
+      	<li>Developed an interactive web page for users to search events and purchase tickets and improved personalized ticket recommendation based on search history and favorite records
+      	<li>Created Java servlets with RESTful APIs to handle HTTP requests and responses</li>
+      	<li>Built Relational Database (MySQL) to capture real ticket data from TicketMaster API</li>
+      	<li>Designed a Content-Based Recommendation Algorithm to implement ticket recommendation</li>
+      </ul>
     </ul>
   </body>
 </html>
