--- a/index.html
+++ b/index.html
@@ -1,27 +1,58 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
+    <h1 align="center">Kyle Savell</h1>
+    <p align="center" class="fancy_header">
+      WPI Class of 2019
     </p>
-    <p>
-      [Major and other information]
+    <p align="center" class="fancy_header">
+      CS Major and IMGD Minor
     </p>
-    <p>
-      [Other things]
+    <p align="center" class="fancy_header">
+      Hobbies include gaming, game design and drawing
     </p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+    <h2 align="center">Experience</h2>
+    <div align="center">
+      <p>
+        CS classes:
+      </p>
+      <ul>
+        <li>All the intro ones (Object Oriented, Systems Programming, Machine/Assembly)</li>
+        <li>Operating Systems</li>
+        <li>Networks</li>
+        <li>Foundations of CS</li>
+        <li>Software Engineering</li>
+        <li>Intro to AI</li>
+      </ul>
+    </div>
+    <div align="center">
+      <p>
+        Working experience:
+      </p>
+      <ul>
+        <li>WPI</li>
+        <li>Seceon</li>
+        <li>Hologic</li>
+      </ul>
+    </div>
+    <div align="center">
+      <p>
+        Technology experience:
+      </p>
+      <ul>
+        <li>HTML - A lot</li>
+        <li>CSS - Some</li>
+        <li>Java - A lot</li>
+        <li>JavaScript - Some</li>
+        <li>Ruby - None</li>
+        <li>Python - A lot</li>
+        <li>Unit Testing - Some</li>
+      </ul>
+    </div>
   </body>
 </html>
