--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Daniel McDonough</h1>
     <p>
-      [Self introduction]
+      Hello, I am a CS & BCB double major in the class of 2020.
     </p>
     <p>
-      [Major and other information]
+      CS & BCB Double Major
     </p>
     <p>
       [Other things]
