--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Jacob Fakult</h1>
     <p>
-      [Self introduction]
+      I like being outside.
     </p>
     <p>
-      [Major and other information]
+      CS Major, class of 2019
     </p>
     <p>
-      [Other things]
+      I am interested in internet and telecommunications infrastructure and governance.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      I have experience with:
+      <ul>
+      <li>HTML/CSS/JS</li>
+      <li>C, C++, Java, Python, SHELL</li>
+    </ul>
     </p>
     <ul>
       <li>IBM/Rational</li>
