--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Tarek Safa</h1>
     <p>
-      [Self introduction]
+      I am a CS major set to graduate in 2019.
     </p>
     <p>
-      [Major and other information]
+      I have taken a plethora of Computer Science courses, of which include:
+	  Mobile and Ubiquiotus Computing, Algorithms, Operating Systems, Databases,
+	  Discrete Mathematics, Foundations of Computer Science, and
+	  Software Engineering
     </p>
     <p>
-      [Other things]
+      Experience:
+	  HTML: Some
+	  CSS: Some
+	  JavaScript: Some
+	  Java: A Lot
+	  Ruby: None
+	  Python: Some
+	  Unit Testing: None
     </p>
 
     <h2>Experience</h2>
