--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Steven McAteer</h1>
     <p>
-      [Self introduction]
+      I am an appliance that codes.
     </p>
     <p>
-      [Major and other information]
+      Computer Science major, Data Science minor
     </p>
     <p>
-      [Other things]
+      I like to DJ, listen to music, go to the gym, and hang with friends.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      The past two summers I have worked at UPS as an AppDev and Data Science Intern.
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>UPS 2017</li>
+      <li>UPS 2018</li>
     </ul>
   </body>
 </html>
