feat: change index.html file

--- a/index.html
+++ b/index.html
@@ -4,24 +4,46 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Stephanie Racca</h1>
     <p>
-      [Self introduction]
+      Class of 2020 
     </p>
     <p>
-      [Major and other information]
+      Computer Science Major
     </p>
     <p>
-      [Other things]
+      I like to listen to and play music, craft, and bake.
     </p>
-
     <h2>Experience</h2>
-    <p>
+    <h3>
       Working experience
-    </p>
+    </h3>
+    <p> The past two summers I have been a QA Intern as well as a Software Engineering Intern.</p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Providence Mutual Insurance</li>
+      <li>Mojotech</li>
+    </ul>
+    <h3>Classes</h3>
+    <ul>
+      <li>CS 1101</li>
+      <li>CS 2102</li>
+      <li>CS 2303</li>
+      <li>CS 2011</li>
+      <li>CS 2022</li>
+      <li>CS 3733</li>
+      <li>CS 2223</li>
+      <li>CS 3013</li>
+      <li>CS 3133</li>
+    </ul>
+    <h3>Language Experience</h3>
+    <ul>
+      <li>Html: some</li>
+      <li>CSS: some</li>
+      <li>Java: some</li>
+      <li>JavaScript: some</li>
+      <li>Ruby: none</li>
+      <li>Python: none</li>
+      <li>Unit Testing: A lot</li>
     </ul>
   </body>
 </html>
