--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Jerry Assan</h1>
     <p>
-      [Self introduction]
+      WPI class of 2020
     </p>
     <p>
-      [Major and other information]
+      Major in CS, minor in DS
     </p>
     <p>
-      [Other things]
+      i have taken java, c and sql courses as well as algorithms.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      CSS: some
+      Java: some
+      JavaScript: some
+      Ruby: none
+      Python: none
+      unit testing: some
     </p>
     <ul>
       <li>IBM/Rational</li>
