Add information to index.html to satisfy basic requirements

--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Matthew Kornitsky</h1>
     <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
+      Hello! I am am aspiring web developer and Computer Science major in the Class of 2020. In my spare time, I enjoy snowboarding 🏂, mountain biking 🚴‍, and tinkering with Photoshop 🖼️.
     </p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+    <h2>WPI Coursework</h2>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>CS 1101 - Introduction to Program Design</li>
+      <li>CS 2102 - Object-Oriented Design Concepts</li>
+      <li>CS 2303 - Systems Programming Concepts</li>
+      <li>CS 2011 - Introduction to Machine Organization and Assembly Language</li>
+      <li>CS 2223 - Algorithms</li>
+      <li>CS 3013 - Operating Systems</li>
+      <li>CS 3133 - Foundations of Computer Science</li>
+      <li>CS 3431 - Database Systems I</li>
+      <li>CS 3516 - Computer Networks</li>
+      <li>CS 3733 - Software Engineering</li>
+      <li>CS 4401 - Software Security Engineering</li>
+      <li>CS 453X - Machine Learning</li>
+    </ul>
+
+    <h2>Programming Experience</h2>
+    <ul>
+      <li>HTML - Some</li>
+      <li>CSS - Some</li>
+      <li>Java - A Lot</li>
+      <li>JavaScript - Some</li>
+      <li>Ruby - None</li>
+      <li>Python - A Lot</li>
+      <li>Unit Testing - Some</li>
     </ul>
   </body>
 </html>
