--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
   <body>
     <h1>Information about [Your name here]</h1>
     <p>
-      [Self introduction]
+      My name is Griffin Cecil and I am a senior this year, class of 2019.
     </p>
     <p>
-      [Major and other information]
+      I am a computer science major, as I suspect most are, currently without a minor.
     </p>
     <p>
-      [Other things]
+      Some notable classes I've taken so far have been Software Engineering and Databases.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      As far as working experience goes, I've had a lot of experience with Java and unit testing, some experience with
+      JavaScript and Python, and no experience with CSS, HTML, or Ruby.
     </p>
     <ul>
       <li>IBM/Rational</li>
