--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
   <body>
     <h1>Information about Peter Maida</h1>
     <p>
-      [Self introduction]
+      WPI class of 2020
     </p>
     <p>
-      [Major and other information]
+      Computer Science major
     </p>
     <p>
-      [Other things]
+      Other classes taken include:
+      Software Engineering, Operating Systems, Foundations of Computer Science
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      HTML - none
+      CSS - some
+      Java - a lot
+      JavaScript - none
+      Ruby - none
+      Python - a lot
+      unit testing - some
     </p>
     <ul>
       <li>IBM/Rational</li>
