--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Andrew DeRusha</h1>
     <p>
-      [Self introduction]
+      Hi everyone, I'm Andrew.
     </p>
     <p>
-      [Major and other information]
+      I'm a junior CS major. 
     </p>
     <p>
-      [Other things]
+      I've had coding expereince with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
+      I've never code in Javascript, so I'm looking forward to that!
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      My work experience involves summer interships working with the company Jackpine. While there, I was primarily working with Java but they were the ones who initially exposed me to HTML, CSS and Ruby. 
     </p>
     <ul>
       <li>IBM/Rational</li>
