--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Information about Steven McAteer</h1>
     <p>
-      I am an appliance that codes.
+      I am a senior at WPI and am pursuing a 5-year BS/MS degree.
     </p>
     <p>
       Computer Science major, Data Science minor
