--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html lang="en">
   <head>
+  	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+  	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-cyan.min.css" />
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Information about Steven McAteer</h1>
