Added a link to Jackpine Technologies home page when mentioning them

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h2>Experience</h2>
     <p>
-      My work experience involves summer interships working with the company Jackpine. While there, I was primarily working with Java but they were the ones who initially exposed me to HTML, CSS and Ruby. 
+      My work experience involves summer interships working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
     </p>
     <ul>
       <li>IBM/Rational</li>
