--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <body>
     <h1>Information about Skyler Kim</h1>
     <p>
-      [Self introduction]
+      My name is Skyler Kim. <br/>I'm a junior majoring in CS. <br/>I have a little experience with ASP .NET, but I would like to learn more. 
+      <br/>I look forward to working with all of you this term.
     </p>
     <p>
-      I'm a junior majoring in CS.<br/> I have a little experience with ASP .NET, but I would like to learn more.
-    </p>
-    <p>
-      I like to play Pokemon VGC. 
+      In my free time, I like to play Pokemon VGC. <a href="https://pokemonshowdown.com/users/bettyflores">Here is my showdown account.</a>
+      <br/> The new format just got released, so I'm not as high on ladder as I would like to be.
     </p>
 
     <h2>Experience</h2>
