--- a/index.html
+++ b/index.html
@@ -4,24 +4,52 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1 align="center">Information about Meghana Bhatia</h1>
+    <h2>Basic Information</h2>
     <p>
-      [Self introduction]
+      I am currently a senior at WPI (class of 2019). I was born in India, but have been living in USA, Japan, Thailand, and South Korea throughout my life. Also, I usually just go by Meg!
     </p>
     <p>
-      [Major and other information]
+      I am majoring in Computer Science with a minor in Interactive Media and Game Development [Tech].
     </p>
     <p>
-      [Other things]
+      Following are some of the CS courses I have taken at WPI: 
+      <ul type = "square"> 
+         <li>CS 2012 </li>
+         <li>CS 2303 </li>
+         <li>CS 2022 </li>
+         <li>CS 3516 </li>
+         <li>CS 2223 </li>
+         <li>CS 3733 </li>
+         <li>CS 3133 </li>
+         <li>CS 3733 </li>
+         <li>CS 4341 </li>
+      </ul>
+     
     </p>
 
     <h2>Experience</h2>
+    <h4>Academic Experience</h4>
     <p>
-      Working experience
+      Working experience with the following:
+      <ul type = "square">
+      <li>HTML: some </li>
+      <li>CSS: none </li>
+      <li>Java: some </li>
+      <li>JavaScript: none </li>
+      <li>Ruby: none </li>
+      <li>Python: a lot </li>
+      <li> Unit Testing: none </li>
+    </ul>
+    </p>
+    <h4>Professional Experience</h4>
+    <p> Click <a href='https://www.linkedin.com/in/meghana-bhatia-wpi'>here</a> see my LinkedIn to know more about what I have worked on!
     </p>
     <ul>
       <li>IBM/Rational</li>
       <li>WPI</li>
     </ul>
   </body>
+
+  
 </html>
