--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Fareya</h1>
     <p>
-      [Self introduction]
+      Hi! I am a 2nd Year CS student at WPI. I enjoy talking to just about everybody... you might say that's not really a skill but I can actually talk to anyone. 
+      On campus, I am a part of WICS, ACM.
+      In my free time I like eating, watching tv, hiking, biking, and laughing at everything.
     </p>
     <p>
-      [Major and other information]
+      Major: CS
+      Attempted Minors: DS and Writing
     </p>
     <p>
-      [Other things]
+      Activities: Hiking, Biking, Complaining, Writing
     </p>
 
     <h2>Experience</h2>
@@ -20,8 +23,16 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Liberty Mutunal Techstart Internship</li>            
+      <li>WPI IT Helpdesk</li>
+      <li>Writing Center Tutor</li>
+    </ul>
+    <p>
+      Web Dev Experience 
+    </p>
+    <ul>
+      <li>HTML and CSS: moderate </li>
+      <li>Javascript: Basically No Experience </li>
     </ul>
   </body>
 </html>
