adding basic css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <style type="text/css">
+      h1 {color: white; background-color: black; position: center}
+      body{background-color: #e0ffff}
+    </style>
   </head>
   <body>
     <h1>Information about Fareya</h1>
@@ -11,7 +15,7 @@
       In my free time I like eating, watching tv, hiking, biking, and laughing at everything.
     </p>
     <p>
-      Major: CS
+      Major: CS </br>
       Attempted Minors: DS and Writing
     </p>
     <p>
@@ -28,11 +32,20 @@
       <li>Writing Center Tutor</li>
     </ul>
     <p>
-      Web Dev Experience 
+      Previous Classes:
+      <p>Systems Programming, Introduction to Machine Language, Computer Networks, Algorithms, Operating Systems, Databases, Social Implications of Computing, Analysis of Algorithms</p>
+    </p>
+ 
+    <p>
+      Technologies
     </p>
     <ul>
       <li>HTML and CSS: moderate </li>
+      <li>Java and Python: moderate to advanced</li>
+      <li>Ruby: None</li>
       <li>Javascript: Basically No Experience </li>
+      <li>unit testing: ehhh</li>
     </ul>
+
   </body>
 </html>
