added css for image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       On campus, I am a part of WICS, ACM.
       In my free time I like eating, watching tv, hiking, biking, and laughing at everything.
     </p>
+    <img src="IMG_1211.JPG" alt="Italian Trulli">
     <p>
       Major: CS </br>
       Attempted Minors: DS and Writing
