Finished the Processing sketches

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="processing.js"></script>
     <meta charset="utf-8">
   </head>
   <body>
@@ -22,7 +23,7 @@
         CS classes:
       </p>
       <ul>
-        <li>All the intro ones (Object Oriented, Systems Programming, Machine/Assembly)</li>
+        <li>All the intro ones (Object Oriented, Systems Programming, Machine Code/Assembly)</li>
         <li>Operating Systems</li>
         <li>Networks</li>
         <li>Foundations of CS</li>
@@ -53,6 +54,10 @@
         <li>Python - A lot</li>
         <li>Unit Testing - Some</li>
       </ul>
+    </div>
+    <div align="center">
+      <canvas data-processing-sources="test/test.pde"></canvas>
+      <canvas data-processing-sources="boxes/boxes.pde"></canvas>
     </div>
   </body>
 </html>
