--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+    <div class = "box1">
+        <h1>Information about Sydney Hurley </h1>
+    </div>
+    <div class = "box2"
+        <p>
+          Class of 2019
+        </p>
+        <p>
+          Double Major in Biomedical Engineering and Professional Writing
+        </p>
+
+        <p>
+          Minor in Computer Science
+        </p>
+
+      </div>
+
+      <div class = "box3">
+
+        <h2>Experience</h2>
+        <p>
+          Previous CS Classes at WPI: CS1001, CS2119, CS3043
+        </p>
+        <p>
+        <ul>
+          <li>HTML - none </li>
+          <li>CSS - none </li>
+          <li>Java - a lot </li>
+          <li>JavaScript - none</li>
+          <li>Ruby - none</li>
+          <li> Python - a lot</li>
+          <li>unit testing - none</li>
+        </ul>
+        </p>
+    </div>
   </body>
 </html>
