--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       </p>
       <ul>
         <li>All the intro ones (Object Oriented, Systems Programming, Machine Code/Assembly)</li>
+        <li>Algorithms</li>
         <li>Operating Systems</li>
         <li>Networks</li>
         <li>Foundations of CS</li>
