--- a/index.html
+++ b/index.html
@@ -22,39 +22,57 @@
       <p>
         CS classes:
       </p>
-      <ul>
-        <li>All the intro ones (Object Oriented, Systems Programming, Machine Code/Assembly)</li>
-        <li>Algorithms</li>
-        <li>Operating Systems</li>
-        <li>Networks</li>
-        <li>Foundations of CS</li>
-        <li>Software Engineering</li>
-        <li>Intro to AI</li>
-      </ul>
+      <table width="300px">
+        <tr>
+          <td>
+              <ul>
+                <li>All the intro ones (Object Oriented, Systems Programming, Machine Code/Assembly)</li>
+                <li>Algorithms</li>
+                <li>Operating Systems</li>
+                <li>Networks</li>
+                <li>Foundations of CS</li>
+                <li>Software Engineering</li>
+                <li>Intro to AI</li>
+              </ul>
+          </td>
+        </tr>
+      </table>
     </div>
     <div align="center">
       <p>
         Working experience:
       </p>
-      <ul>
-        <li>WPI</li>
-        <li>Seceon</li>
-        <li>Hologic</li>
-      </ul>
+      <table width="300px">
+        <tr>
+          <td>
+            <ul>
+              <li>WPI</li>
+              <li>Seceon</li>
+              <li>Hologic</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
     </div>
     <div align="center">
       <p>
         Technology experience:
       </p>
-      <ul>
-        <li>HTML - A lot</li>
-        <li>CSS - Some</li>
-        <li>Java - A lot</li>
-        <li>JavaScript - Some</li>
-        <li>Ruby - None</li>
-        <li>Python - A lot</li>
-        <li>Unit Testing - Some</li>
-      </ul>
+      <table width="300px">
+        <tr>
+          <td>
+            <ul>
+              <li>HTML - A lot</li>
+              <li>CSS - Some</li>
+              <li>Java - A lot</li>
+              <li>JavaScript - Some</li>
+              <li>Ruby - None</li>
+              <li>Python - A lot</li>
+              <li>Unit Testing - Some</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
     </div>
     <div align="center">
       <canvas data-processing-sources="test/test.pde"></canvas>
