--- a/index.html
+++ b/index.html
@@ -4,24 +4,68 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Yaofeng Wang, WPI 2019' </h1>
     <p>
-      [Self introduction]
+      Hi everyone, welcome to my page! My name is Yaofeng Wang, originally from Shenyang, China, living in Worcester, MA, USA. I am a senior at Worcester Polytechnic institute double majoring in Computer Science and Industrial Engineering. I enjoy singing and watching movies. One of my life goals is to travel around the world and visit all continents.
     </p>
+    
+    <h4> * Majors: </h4>
     <p>
-      [Major and other information]
+      Computer Science (CS) & Industrial Engineering (IE)
     </p>
+    
+    <h4>* Previous Computer Science courses taken at WPI:</h4>
     <p>
-      [Other things]
+      CS1101 Introduction To Program Design <br />
+      CS2022 Discrete Mathematics <br />
+      CS2102 Object-oriented Design Concepts <br />
+      CS2223 Algorithms <br />
+      CS2303 Systems Programming Concepts <br />
+      CS3013 Operating Systems <br />
+      CS3043 Social Implications Of Information Processing <br />
+      CS3133 Foundations Of Computer Science <br />
+      CS3431 Database Systems I <br />
+      CS3733 Software Engineering <br />
+      CS4120 Analysis Of Algorithms <br />
+      CS4341 Introduction To Artificial Intelligence <br />
+      CS4801 Introduction To Cryptography And Communication Security <br />
     </p>
-
+    <h4>* Experience with the following technologies and methods</h4>
+    <p> 
+      HTML: some <br />
+      CSS: none <br />
+      Java: a lot <br />
+      JavaScript: none <br />
+      Ruby: none <br />
+      Python: a lot <br />
+      Unit testing: none <br />
+    </p>
     <h2>Experience</h2>
     <p>
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>
+        Senior Assistant for CS4241, WPI <br />
+        August 2018 - now 
+      </li>
+      <li>
+        Information Architect Intern, The Hanover Insurance Group, Worcester, MA <br />
+        June 2018 - August 2018 <br />
+        Mapped a process to ... <br />
+      </li>
+
+      <li>
+        Software Development Intern, Siasun Robot and Automation CO., LTD, Shenyang, China <br />
+        June 2017 - August 2017 <br />
+        Implemented a C# Quartz job scheduler in a tea collecting and producing line using Visual Studio window form application. Connected Quartz with the production line organizing website using C# and JavaScript.
+      </li>
+      <li>
+        Web Developer Intern, Chinese Academy of Sciences, Shenyang, China <br />
+        May 2016 - August 2016 <br />
+        Edited the company website in Java, JavaScript, and HTML allowing employee communication. Built a database of the employees’ information using Oracle SQL. Enhanced the website with pictures, dropdown lists, checkboxes, and keywords searches.
+      </li>
+
     </ul>
   </body>
 </html>
