--- a/index.html
+++ b/index.html
@@ -4,24 +4,32 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Trang Ha</h1>
     <p>
-      [Self introduction]
+      I am Trang Ha, class of 2019.
     </p>
     <p>
-      [Major and other information]
+      I'm majoring in Computer Science with a minor in Stats.
     </p>
     <p>
-      [Other things]
+      Courses in CS I've previously taken at WPI include Software Engineering, Algorithms, OS, Foundation of CS, OOAD, Mobile Ubiquitous Android programming.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      <h3> Academic Experience</h3>
+	  <ul>
+	      <li>WPI</li>
+	  </ul>
+      <ul>
+      	<li>HTML: some</li>
+      	<li>CSS: some</li>
+      	<li>Javascript: some</li>
+      	<li>Java: a lot</li>
+      	<li>Ruby: none</li>
+      	<li>Python: some</li>
+      	<li>unit testing: a lot</li>
+      </ul>
     </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
   </body>
 </html>
