--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Abigail Roane</h1>
     <p>
-      [Self introduction]
+      Class of 2019
     </p>
     <p>
-      [Major and other information]
+      Computer Science Major
     </p>
     <p>
-      [Other things]
+      Computer Science courses taken:<br> Foundations, Databases I + II, Operating Systems, Software Engineering, Artificial Intelligence
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      HTML: a lot<br>
+      CSS: a lot<br>
+      Java: a lot<br>
+      Javascript: some<br>
+      Ruby: none<br>
+      Python: none<br>
+      unit testing: some<br><br>
+      Work Experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
+      <li>MITRE</li>
+      <li>SystemOne</li>
       <li>WPI</li>
     </ul>
   </body>
