Change header font

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 1</title>
+    <title><font face="gerogia">CS4241 Assignment 1</font></title>
     <meta charset="utf-8">
   </head>
   <body>
     <h1>Information about Andrew DeRusha</h1>
     <p>
-      Hi everyone, I'm Andrew.
-    </p>
-    <p>
-      I'm a junior CS major. 
+      Hi everyone, I'm Andrew. I'm a junior CS major. 
     </p>
     <p>
       Although I'm a CS major, I do have a pation for drawing, graphical design and visual media.
