Changed alignment and font of header

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
   <head>
-    <title><font face="gerogia">CS4241 Assignment 1</font></title>
+    <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about Andrew DeRusha</h1>
+    <center><h1><font face="gerogia">Information about Andrew DeRusha</font></h1></center>
     <p>
       Hi everyone, I'm Andrew. I'm a junior CS major. 
     </p>
