--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
-  <body>
-    <center><h1><font face="gerogia">Information about Andrew DeRusha</font></h1></center>
-    <p>
+  <center>
+    <body>
+    <h1><font face="gerogia">Information about Andrew DeRusha</font></h1>
+    <h3>
       Hi everyone, I'm Andrew. I'm a junior CS major. 
-    </p>
+    </h3>
     <p>
       Although I'm a CS major, I do have a pation for drawing, graphical design and visual media.
     </p>
@@ -29,4 +30,5 @@
       <li>WPI</li>
     </ul>
   </body>
+  </center>
 </html>
