Changed font of header and body to be different

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   <center>
     <body>
-    <h1><font face="gerogia">Information about Andrew DeRusha</font></h1>
+    <h1><font face="georgia">Information about Andrew DeRusha</font></h1>
+    <font face="verdana">
     <h3>
       Hi everyone, I'm Andrew. I'm a junior CS major. 
     </h3>
@@ -29,6 +30,7 @@
       <li>IBM/Rational</li>
       <li>WPI</li>
     </ul>
+    </font>
   </body>
   </center>
 </html>
