--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   </head>
   <center>
     <body>
-    <h1><font face="georgia">Information about Andrew DeRusha</font></h1>
+    <font face="georgia">
+      <h1>Information about Andrew DeRusha</h1>
+      <h3>Hi everyone, I'm Andrew. I'm a junior CS major.</h3>
+      </font>
     <font face="verdana">
-    <h3>
-      Hi everyone, I'm Andrew. I'm a junior CS major. 
-    </h3>
     <p>
       Although I'm a CS major, I do have a pation for drawing, graphical design and visual media.
     </p>
@@ -21,8 +21,12 @@
       I've had coding expereince with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
       I've never code in Javascript, so I'm looking forward to that!
     </p>
+      </font>
 
-    <h2>Experience</h2>
+    <font face="georgia">
+      <h2>Experience</h2>
+      </font>
+    <font face="verdana">
     <p>
       My work experience involves summer interships working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
     </p>
