Created landing page with info

--- a/index.html
+++ b/index.html
@@ -2,26 +2,64 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
+    <div class="Title">
+        <h1>Information about Christian Scillitoe - WPI Class of 2019</h1>
+    </div>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+    <div class="FlexContainer">
+        <div class="FlexElement" id="Introduction">
+            <div class="ElementHeader">
+                Self Introduction
+            </div>
+            <div class="ElementBody">
+                I am a Senior at WPI with a major in Computer Science, and a minor in Data Science.
+                I love playing video games and creating open source software
+                in my free time. I participate in the Chess, Badminton, and
+                Cybersecurity clubs on campus.
+            </div>
+        </div>
+
+        <div class="FlexElement" id="LanguageExperience">
+            <div class="ElementHeader">
+                Language Experience
+            </div>
+            <div class="ElementBody">
+                <b>HTML: </b>Some<br>
+                <b>CSS: </b>Some<br>
+                <b>Java: </b>A lot<br>
+                <b>JavaScript: </b>Some<br>
+                <b>Ruby: </b>None<br>
+                <b>Python: </b>A lot<br>
+                <b>Unit Testing: </b>A lot<br>
+            </div>
+        </div>
+
+        <div class="FlexElement" id="Courses Taken">
+            <div class="ElementHeader">
+                CS Courses Taken
+            </div>
+            <div class="ElementBody">
+                1102, 2102, 2011, 2303,
+                2022, 2223, 3013, 3516,
+                3733, 3041, 3431, 4516,
+                4233, 3133, 4341, 453X
+            </div>
+        </div>
+
+        <div class="FlexElement" id="WorkExperience">
+            <div class="ElementHeader">
+                Work Experience
+            </div>
+            <div class="ElementBody">
+                This past summer I worked as a full stack web developer for
+                Community Software Group. They enjoyed my work, so I am still
+                working there part time during the school year. Their stack
+                contains Angular6, .NET Core, and SQL Server.
+            </div>
+        </div>
+    </div>
   </body>
 </html>
