Indented text below images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="Render3.png" alt="Town up close" width="320" height="200">
     <img src="Render5.png" alt="Template Enterence" width="320" height="200">
     <img src="Render10.png" alt="Tomb" width="320" height="200">
-    <p>
+    <p style="margin-left:3em;" style="margin-right:3em;">
       I've had coding expereince with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
       I've never code in Javascript, so I'm looking forward to that!
     </p>
@@ -27,10 +27,10 @@
       <h2>Experience</h2>
       </font>
     <font face="verdana">
-    <p>
+    <p style="margin-left:3em;" style="margin-right:3em;">
       My work experience involves summer interships working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
     </p>
-    <ul>
+    <ul style="margin-left:3em;" style="margin-right:3em;">
       <li>IBM/Rational</li>
       <li>WPI</li>
     </ul>
