--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
       </tr>
     </table>
     <p>
-      That's my working experience!
+     Working experience!
     </p>
     <ul>
-      <li>A list, thats been modified</li>
+      <li>Rocket Software</li>
       <li>WPI</li>
+      <li>Random things for FRC</li>
     </ul>
   </body>
 </html>
