First commit, updated landing page

--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Léo Gonsalves</h1>
     <p>
-      [Self introduction]
+      Hello! My name is Léo (Lee-oh) and I am a CS student from São Paulo, Brazil.
     </p>
     <p>
-      [Major and other information]
+      I am a Computer Science Major, currently planning on pursuing a IMGD minor.
     </p>
     <p>
-      [Other things]
+      I am very interested in WebDev and Game programming. When it comes to gamedev I haven't had enough opportunities to experiment with any other engines beyond UE4, but I hope I can get the chance to dive deep into Unity and C# as well.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      Experience with languages (0-100)
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>HTML (50)</li>
+      <li>CSS  (50)</li>
+      <li>Java (60)</li>
+      <li>Javascript (40)</li>
+      <li>Ruby (00)</li>
+      <li>Python (00)</li>
+      <li>Unit Testing (13)</li>
     </ul>
   </body>
 </html>
