Changed background, added div, and centered text

--- a/index.html
+++ b/index.html
@@ -3,50 +3,72 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
     <style type="text/css">
-      h1 {color: white; background-color: black; position: center}
-      body{background-color: #e0ffff}
+      h1 {
+        color: white;
+        background-color: black; 
+        position: center}
+      body{
+        background-color: #e0ffff;
+        background-image: url("IMG_1211.JPG");
+        background-size: 100%}
+      img{
+        height:100px;
+        width:200px;
+      }
+      div{
+        width: 60%;
+        background-color: white;
+        opacity: 0.7;
+        margin-left: 15%;
+        margin-right: 15%;
+        padding-left: 5%;
+        padding-top: 2%;
+        padding-right: 5%;
+        padding-bottom: 2%;
+      }
+
     </style>
   </head>
   <body>
     <h1>Information about Fareya</h1>
-    <p>
-      Hi! I am a 2nd Year CS student at WPI. I enjoy talking to just about everybody... you might say that's not really a skill but I can actually talk to anyone. 
-      On campus, I am a part of WICS, ACM.
-      In my free time I like eating, watching tv, hiking, biking, and laughing at everything.
-    </p>
-    <img src="IMG_1211.JPG" alt="Italian Trulli">
-    <p>
-      Major: CS </br>
-      Attempted Minors: DS and Writing
-    </p>
-    <p>
-      Activities: Hiking, Biking, Complaining, Writing
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>Liberty Mutunal Techstart Internship</li>            
-      <li>WPI IT Helpdesk</li>
-      <li>Writing Center Tutor</li>
-    </ul>
-    <p>
-      Previous Classes:
-      <p>Systems Programming, Introduction to Machine Language, Computer Networks, Algorithms, Operating Systems, Databases, Social Implications of Computing, Analysis of Algorithms</p>
-    </p>
+    <div>
+         <p>
+        Hi! I am a 2nd Year CS student at WPI. I enjoy talking to just about everybody... you might say that's not really a skill but I can actually talk to anyone. 
+        On campus, I am a part of WICS, ACM.
+        In my free time I like eating, watching tv, hiking, biking, and laughing at everything.
+      </p>
  
-    <p>
-      Technologies
-    </p>
-    <ul>
-      <li>HTML and CSS: moderate </li>
-      <li>Java and Python: moderate to advanced</li>
-      <li>Ruby: None</li>
-      <li>Javascript: Basically No Experience </li>
-      <li>unit testing: ehhh</li>
-    </ul>
+      <p>
+        Major: CS </br>
+        Attempted Minors: DS and Writing
+      </p>
+      <p>
+        Activities: Hiking, Biking, Complaining, Writing
+      </p>
 
+      <h2>Experience</h2>
+      <p>
+        Working experience
+      </p>
+      <ul>
+        <li>Liberty Mutunal Techstart Internship</li>           <li>WPI IT Helpdesk</li>
+        <li>Writing Center Tutor</li>
+      </ul>
+      <p>
+        Previous Classes:
+        <p>Systems Programming, Introduction to Machine   Language, Computer Networks, Algorithms, Operating Systems, Databases, Social Implications of Computing, Analysis of Algorithms</p>
+      </p>
+ 
+      <p>
+        Technologies
+      </p>
+      <ul>
+        <li>HTML and CSS: moderate </li>
+        <li>Java and Python: moderate to advanced</li>
+        <li>Ruby: None</li>
+        <li>Javascript: Basically No Experience </li>
+        <li>unit testing: ehhh</li>
+      </ul>
+    </div>
   </body>
 </html>
