--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+  	<div id="mainblock">
     <h1>Information about Léo Gonsalves</h1>
     <p>
       Hello! My name is Léo (Lee-oh) and I am a CS student from São Paulo, Brazil.
@@ -28,5 +30,6 @@
       <li>Python (00)</li>
       <li>Unit Testing (13)</li>
     </ul>
+	</div>
   </body>
 </html>
