--- a/index.html
+++ b/index.html
@@ -1,27 +1,7 @@
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 1</title>
+    <title>Redirecting to ravana...</title>
+    <meta http-equiv="Refresh" content="0; https://ravana.dyn.wpi.edu">
     <meta charset="utf-8">
   </head>
-  <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
-  </body>
 </html>
