--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Elizabeth Del Monaco </h1>
     <p>
-      [Self introduction]
+      Hello! My name is Elizabeth.
     </p>
     <p>
-      [Major and other information]
+      I am a junior at WPI studying CS. I am president of Women in Computer Science and I am a brother of Alpha Phi Omega.
     </p>
     <p>
-      [Other things]
+      I enjoy movies, hiking, art, reading and writing. My favorite TV show is Breaking Bad. I love to bake.
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      No experience in HTML, CSS, JavaScript, Ruby. Moderate experience in unit testing and Python. Experienced in Java.
     </p>
     <ul>
       <li>IBM/Rational</li>
